# My-app-llm

./: .gitignore  Dockerfile  README.md  pyproject.toml  temp_audio.webm
app/: database.py  models.py  rag_chain.py  server.py
app/audio/: routes.py
app/auth/: dependencies.py  routes.py  utils.py
app/schemas/: user.py
app/services/: pdf_indexer.py
frontend/: .env.production  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/chat/components/: ChatContainer.tsx  ChatHeader.tsx  MessageInput.tsx  MessageList.tsx  ResponseControls.tsx  useChatLogic.ts
frontend/app/terms/: page.tsx
frontend/components/: LocaleDate.tsx  auth-form.tsx  chat-header.tsx  chat-message.tsx  chat-sidebar.tsx
frontend/hooks/: use-mobile.tsx  use-user-store.ts  useVoiceRecorder.ts
frontend/lib/: api.ts  logout.ts
rag-data-loader/: rag_load_and_process.py
